devops/04 - helm/flask_app/templates/web_nw-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: web_nw
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/web_nw: "true"
  podSelector:
    matchLabels:
      io.kompose.network/web_nw: "true"
